--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <h1>Mix-Or-Match</h1>
+<div class="overlay-text visible">Click to start</div>
+<div class="overlay-text" id="game-over-text">Game Over <span>Click to restart</span></div>
+<div class="overlay-text" id="victory-text">Victory <span>Click to restart</span></div>
 <div class="game-container">
   <div class="game-info-container">
     <div class="game-info">
