typescript et binding parents/childs components

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div class="card-container {{cardVisibility}}" (click)='flipCard($event)'>
     <div class="card-back card-face">
         <div class="line1"></div>
         <div class="line2"></div>
