--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,18 @@
 <h1>Mix-Or-Match</h1>
-<div class="overlay-text visible">Click to start</div>
-<div class="overlay-text" id="game-over-text">Game Over <span>Click to restart</span></div>
-<div class="overlay-text" id="victory-text">Victory <span>Click to restart</span></div>
+<div class="overlay-text {{overlayStart}}" (click)='startGame()'>Click to start</div>
+<div class="overlay-text {{overlayGameOver}}" id="game-over-text">Game Over <span>Click to restart</span></div>
+<div class="overlay-text {{overlayVictory}}" id="victory-text">Victory <span>Click to restart</span></div>
 <div class="game-container">
   <div class="game-info-container">
     <div class="game-info">
-      Time <span id="time-remaining">100</span>
+      Time <span id="time-remaining">{{timer}}</span>
     </div>
     <div class="game-info">
-      Flips <span id="flips">0</span>
+      Flips <span id="flips">{{flips}}</span>
     </div>
   </div>
   <div class="card" *ngFor="let cardValue of cardsValue">
-    <app-card [cardValue]="cardValue"></app-card>
-  </div>
-  <div class="card" *ngFor="let cardValue of cardsValue">
-    <app-card [cardValue]="cardValue"></app-card>
+    <app-card [cardValue]="cardValue" [cardVisibility]="cardsVisibility['cardValue'+'1']" [cardNumber]=1></app-card>
+    <app-card [cardValue]="cardValue" [cardVisibility]="cardsVisibility['cardValue'+'2']" [cardNumber]=2></app-card>
   </div>
 </div>
