--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,5 +1,5 @@
-<div class="card-container {{cardVisibility}}" (click)='flipCard($event)'>
-    <div class="card-back card-face">
+<div class="card-container {{cardVisibility}}">
+    <div class="card-back card-face" (click)='handleClick()'>
         <div class="line1"></div>
         <div class="line2"></div>
     </div>
