images icons colors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Mix-Or-Match</h1>
+<h1>Memory Game</h1>
 <div class="overlay-text {{overlayStart}}" (click)='startGame()'>Click to start</div>
 <div class="overlay-text {{overlayGameOver}}" id="game-over-text" (click)='startGame()'>Game Over <span>Click to restart</span></div>
 <div class="overlay-text {{overlayVictory}}" id="victory-text" (click)='startGame()'>Victory <span>Click to restart</span></div>
