--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,9 @@ h1{
     width: 600px;
     margin: 1rem auto;
     text-align: center;
-
+    font-family: waterway;
+    font-size: 5rem;
+    line-height:100%;
 }
 .card{
     
@@ -22,9 +24,12 @@ h1{
     grid-column: 1 / -1;
     display: flex;
     justify-content: space-between;
+    font-family: roboto;
     font-size: 2rem;
 }
 .overlay-text{
+    font-family: lost at sea;
+    line-height: 70%;
     position: fixed;
     top: 0;
     right: 0;
@@ -34,14 +39,16 @@ h1{
     align-items: center;
     z-index: 10;
     display: none;
+    cursor: pointer;
 }
 .overlay-text.visible{
     display: flex;
     flex-direction: column;
     animation: grow 500ms forwards;
+    
 }
 .overlay-text>span{
-font-size: .3em;
+font-size: .5em;
 }
 @keyframes grow {
     from {
@@ -49,7 +56,7 @@ font-size: .3em;
         background-color: rgba(0, 0, 0, 0);
     }
     to{
-        font-size: 8rem;
+        font-size: 10rem;
         background-color: rgba(0, 0, 0, 0.5);
     }
 }
