--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,17 @@
+
 h1{
-    width: 600px;
-    margin: 1rem auto;
+    width: max-content;
+    margin: 2vh auto;
+    margin-bottom: 3vh;
     text-align: center;
-    font-family: waterway;
-    font-size: 5rem;
+    font-family: atlantis; 
+    font-size: 5vh;
     line-height:100%;
 }
 .card{
     
-    height: 175px;
-    width: 125px;
+    height: 15vh;
+    width: 100px;
 
 }
 .game-container{
@@ -19,13 +21,14 @@ h1{
     width: max-content; /* ou justify-content: center pour pour espacer correctement*/
     margin: 0 auto;
     
+    
 }
 .game-info-container{
     grid-column: 1 / -1;
     display: flex;
     justify-content: space-between;
     font-family: roboto;
-    font-size: 2rem;
+    font-size: 3vh;
 }
 .overlay-text{
     font-family: lost at sea;
@@ -56,7 +59,25 @@ font-size: .5em;
         background-color: rgba(0, 0, 0, 0);
     }
     to{
-        font-size: 10rem;
+        font-size: 5rem;
         background-color: rgba(0, 0, 0, 0.5);
+    }
+}
+
+@media screen and (max-width:560px) {
+    .card{
+        width: 75px;
+    }
+}
+
+@media screen and (max-width:350px) {
+    .card{
+        width: 50px;
+    }
+}
+
+@media screen and (max-height:650px) {
+    .game-info-container{
+        font-size: 4vh;
     }
 }
