--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<h1>Memory Game</h1>
+<h1>Memory <br> Game</h1>
 <div class="overlay-text {{overlayStart}}" (click)='startGame()'>Click to start</div>
 <div class="overlay-text {{overlayGameOver}}" id="game-over-text" (click)='startGame()'>Game Over <span>Click to restart</span></div>
-<div class="overlay-text {{overlayVictory}}" id="victory-text" (click)='startGame()'>Victory <span>Click to restart</span></div>
+<div class="overlay-text {{overlayVictory}}" id="victory-text" (click)='startGame()'>Victory <span>Click to restart</span></div> 
 <div class="game-container">
   <div class="game-info-container">
     <div class="game-info">
