--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,3 @@
-
 h1{
     width: max-content;
     margin: 2vh auto;
@@ -8,21 +7,20 @@ h1{
     font-size: 5vh;
     line-height:100%;
 }
-.card{
-    
+
+.card{  
     height: 15vh;
     width: 100px;
-
 }
+
 .game-container{
     display: grid;
     grid-template-columns: repeat(4, auto);
     gap: 10px;
     width: max-content; /* ou justify-content: center pour pour espacer correctement*/
     margin: 0 auto;
-    
-    
 }
+
 .game-info-container{
     grid-column: 1 / -1;
     display: flex;
@@ -32,8 +30,9 @@ h1{
 }
 .overlay-text{
     font-family: lost at sea;
-    line-height: 70%;
-    position: fixed;
+    /* line-height: 150%; */
+    font-weight: bold;
+    position: fixed; 
     top: 0;
     right: 0;
     bottom: 0;
@@ -43,15 +42,15 @@ h1{
     z-index: 10;
     display: none;
     cursor: pointer;
+    padding: auto;
 }
 .overlay-text.visible{
-    display: flex;
+    display: flex; 
     flex-direction: column;
     animation: grow 500ms forwards;
-    
 }
 .overlay-text>span{
-font-size: .5em;
+font-size: .7em;
 }
 @keyframes grow {
     from {
@@ -76,8 +75,18 @@ font-size: .5em;
     }
 }
 
-@media screen and (max-height:650px) {
+@media screen and (max-height:750px) {
     .game-info-container{
         font-size: 4vh;
     }
+}
+@media screen and (max-height:500px) {
+    .game-info-container{
+        font-size: 6vh;
+    }
+}
+@media screen and (max-height:400px) {
+        .game-info-container{
+            font-size: 8vh;
+        }
 }
