--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,9 @@ body{
     margin: 0; 
     background:radial-gradient(rgb(163, 187, 175),rgb(90, 114, 103));
     height: 100vh;
+    background-image: url(assets/images/4173921.jpg);
+    background-size: cover;
+    background-position: bottom;
     /* background-image:url("assets/images/fond3.jpg") ;
     background-size: cover; */
 }
